added memory allocation

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,14 @@ after_success:
     - docker push oalquimista/multi-server
     - docker push oalquimista/multi-worker
     
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-004349333949
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
